@@ -1,40 +1,44 @@
 package ru.vcu.cs.bookStore.service;
 
-import org.springframework.stereotype.Service;
-import ru.vcu.cs.bookStore.entity.Buyer;
-import ru.vcu.cs.bookStore.repository.BuyerRepository;
+        import org.springframework.stereotype.Service;
+        import ru.vcu.cs.bookStore.data.dto.BuyerDto;
+        import ru.vcu.cs.bookStore.data.entity.Buyer;
+        import ru.vcu.cs.bookStore.repository.BuyerRepository;
 
-import java.util.List;
+        import java.util.List;
+        import java.util.stream.Collectors;
 
 @Service
 public class BuyerService {
     private final BuyerRepository repository;
+    private final MappingUtils mapper;
 
-    public BuyerService(BuyerRepository repository) {
+    public BuyerService(BuyerRepository repository, MappingUtils mapper) {
         this.repository = repository;
+        this.mapper = mapper;
     }
 
-    private Buyer findById(Integer id) {
-        return repository.findAll().stream().filter(com -> com.getBuyer_id().equals(id)).toList().get(0);
+    public List<BuyerDto> getAll() {
+        return repository.findAll().stream().map(mapper::mapToBuyerDto).collect(Collectors.toList());
+    }
+
+    public BuyerDto getById(Integer id) {
+        return mapper.mapToBuyerDto(repository.findById(id).get());
+    }
+
+    public void addNewBuyer(BuyerDto buyer) {
+        repository.save(mapper.mapToProductEntity(buyer));
     }
 
     public void deleteBuyer(Integer id) {
-        repository.delete(findById(id));
+        repository.deleteById(id);
     }
 
-    public void addNewBuyer(Buyer buyer) {
-        repository.save(buyer);
-    }
-
-    public List<Buyer> getAll() {
-        return repository.findAll();
-    }
-
-    public Buyer getById(Integer id) {
-        return findById(id);
-    }
-
-    public void editBuyer(Buyer buyer) {
-        repository.save(buyer);
+    public void updateBuyer(BuyerDto buyer, Integer id) {
+        Buyer oldBuyer = repository.findById(id).get();
+        Buyer newBuyer = mapper.mapToProductEntity(buyer);
+        newBuyer.setBuyer_id(oldBuyer.getBuyer_id());
+        repository.save(newBuyer);
     }
 }
+
